discussion/kv_engine/134853/134853_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40920: Add magma variant to CollectionsKVStoreTest

Change-Id: I8c2904f91e7ac42fde50dfaba09bc658f7144692

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-08-21 19:58:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-21 20:38:19.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25726/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25726/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3905/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:41:43: error: expected class name [clang-diagnostic-error]
class CollectionsKVStoreTestBase : public KVStoreBackend, public KVStoreTest {
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:94:17: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
                kvstore->delSystemEvent(ev);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:96:17: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
                kvstore->setSystemEvent(ev);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:166:24: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        auto dropped = kvstore->getDroppedCollections(Vbid(0));
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:220:9: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        kvstore->begin(std::make_unique<TransactionContext>(vbucket.getId()));
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:222:9: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        kvstore->commit(flush);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:223:19: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        auto md = kvstore->getCollectionsManifest(Vbid(0));
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:243:9: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
        KVStoreBackend::setup(data_dir, GetParam());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:247:9: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
        KVStoreBackend::teardown();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:254:15: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
    auto md = kvstore->getCollectionsManifest(Vbid(0));
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:336:8: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
static std::string kvstoreTestParams[] = {"couchdb", "magma"};
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:84:7: error: redefinition of "KVStoreParamTest" [clang-diagnostic-error]
class KVStoreParamTest : public KVStoreTest,
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:57:7: note: previous definition is here
class KVStoreParamTest : public KVStoreTest,
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:85:33: error: expected class name [clang-diagnostic-error]
                         public KVStoreBackend,
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3905/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:41:43:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3905/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29693/ : FAILURE

Link error: fatal error LNK1168: cannot open platform\platform_so.dll for writing ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29693/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5120/ : FAILURE

Compile error at [2020-08-21T20:15:58.771Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5120/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5207/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5309/ : FAILURE

Compile error at [2020-08-21T20:27:20.059Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5309/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13030/ : FAILURE

Compile error at [2020-08-21T20:34:48.135Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13030/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4232/ : FAILURE

Compile error at [2020-08-21T20:17:16.927Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4232/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2430/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-08-24 16:22:39.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
